# openrave

./: .gitignore  README.md  README.rst
plugins/rmanipulation/: basemanipulation.cpp
plugins/rplanners/: CMakeLists.txt  basicrrt.cpp  rplanners.h  rrt.cpp  rrt.h  rrt_setget.cpp  spatialtree.cpp
python/bindings/: bindings.h  convexdecompositionpy.cpp  openravepy_collisionchecker.cpp  openravepy_global.cpp  openravepy_iksolver.cpp  openravepy_int.cpp  openravepy_int.h  openravepy_kinbody.cpp  openravepy_physicsengine.cpp  openravepy_planner.cpp  openravepy_robot.cpp  openravepy_sensor.cpp  openravepy_spacesampler.cpp  openravepy_trajectory.cpp  pyann.cpp
sandbox/: updateikfiles.py
src/: CMakeLists.txt
src/bindings/: CMakeLists.txt  bindings.cpp  bindings.h  compile.bash  convexdecompositionpy.cpp  openravepy_actuatorgeomdata.h  openravepy_attachedsensorinfo.h  openravepy_camerageomdata.h  openravepy_cameraintrinsics.h  openravepy_collisionchecker.cpp  openravepy_collisioncheckerbase.h  openravepy_collisionreport.h  openravepy_configurationspecification.h  openravepy_connectedbodyinfo.h  openravepy_controller.cpp  openravepy_controllerbase.h  openravepy_electricmotoractuatorinfo.h  openravepy_environment.h  openravepy_force6dgeomdata.h  openravepy_geometryinfo.h  openravepy_global.cpp  openravepy_ikparameterization.cpp  openravepy_iksolver.cpp  openravepy_iksolverbase.h  openravepy_imugeomdata.h  openravepy_int.cpp  openravepy_int.h  openravepy_joint.h  openravepy_jointencodergeomdata.h  openravepy_jointinfo.h  (+24 more)
src/bindings-simple/: CMakeLists.txt  bindings.h
(+43 files in other folders)
